[package]
name = "rups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
inquire = "0.7.5"
magic-crypt = "3.1.13"
rusqlite = { version = "0.31.0", features = ["bundled"] }
